--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
         "dev": "nodemon index.js"
     },
     "dependencies": {
+        "axios": "^1.7.9",
         "dotenv": "^16.4.7",
         "express": "^4.21.2",
         "mysql2": "^3.12.0"
